Use coverity-scan-action in CI
Simplifies the CI job and adds a cache to avoid downloading the 1GB+
tool archive on every run. See more at:
https://github.com/vapier/coverity-scan-action

--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -3,31 +3,18 @@ on: [push, pull_request]
 
 jobs:
   analyze:
-    if: github.repository == 'c9s/r3'
+    # if: github.repository == 'c9s/r3'
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Download Coverity
-      run: |
-        cd ..
-        wget -q https://scan.coverity.com/download/linux64 --post-data "token=${{secrets.COVERITY_TOKEN}}&project=r3" -O coverity-linux64.tgz
-        mkdir coverity
-        tar xzf coverity-linux64.tgz --strip 1 -C coverity
-        echo "$(pwd)/coverity/bin" >> $GITHUB_PATH
-
-    - name: Build with Coverity
+    - uses: actions/checkout@v3
+    - name: Prepare
       run: |
         ./autogen.sh
         ./configure --enable-check --enable-debug
-        cov-build --dir cov-int make V=1
-
-    - name: Submit the result to Coverity
-      run: |
-        tar czvf r3.tgz cov-int
-        curl \
-          --form token=${{secrets.COVERITY_TOKEN}} \
-          --form email=yoanlin93+github@gmail.com \
-          --form file=@r3.tgz \
-          --form version=${GITHUB_SHA} \
-          https://scan.coverity.com/builds?project=r3
+    - uses: vapier/coverity-scan-action@v1
+      with:
+        project: r3
+        email: bjorn.a.svensson@est.tech
+        # email: yoanlin93+github@gmail.com
+        token: ${{ secrets.COVERITY_TOKEN }}
